# fsim

./: .gitignore  Cargo.toml  README.md  codecov.sh  cov.sh
optimization/: 33877f7d-b582-4229-8ae7-2051f67048fd.sol  44bceea6-ae60-44b4-b4c7-53fd9bbc47f2.sol  Cargo.toml  Shard Replica Assignment_00a9c73b-395d-46ec-86da-0b59eb43ff7f.lp  Shard Replica Assignment_04b1edf0-829e-4a7a-af6c-7b95a9bb84b3.lp  Shard Replica Assignment_14f7b3cb-ddbd-4bff-8158-6af5d11fb1fc.lp  Shard Replica Assignment_379aa218-9edb-4e0c-9af6-387dd46753be.lp  Shard Replica Assignment_4893c50a-dc2c-4767-9c36-bdefff53bbc1.lp  Shard Replica Assignment_51bc8e17-4c30-4dcd-89bb-02e292a8d5a7.lp  Shard Replica Assignment_56a67d30-33a2-4be9-9d19-e3467ed2d40b.lp  Shard Replica Assignment_5813b030-74a3-4004-8427-2d6fae62faf8.lp  Shard Replica Assignment_5b1c2b55-403e-4caf-bce9-ed67bddd8583.lp  Shard Replica Assignment_84137137-eec7-4e75-ab2b-03647935587d.lp  Shard Replica Assignment_b0756884-7422-416e-9c1b-85148ddd9aba.lp  Shard Replica Assignment_d37565e5-c181-4bb2-941d-b9d6c173e66e.lp  Shard Replica Assignment_de4290cf-1f9a-4879-9910-3f1115894158.lp  a3de4781-37c8-440b-a193-4cc127fe5ce4.sol  c2a2ae75-a0e6-456d-906f-f631570cfe05.sol  e168984c-514e-4f1e-83fd-a4b0571ad3ed.sol
optimization/benches/: lp.rs  weights.json
optimization/src/: algebra.rs  array.rs  assign_replicas.rs  distribution.rs  genetic.rs  lib.rs  replica.rs  replica_old.rs  routing.rs  solver.rs
qrsim/: Cargo.toml
qrsim/src/: broker.rs  genfailures.rs  geninput.rs  lib.rs  main.rs  node.rs  query_generator.rs  query_log.rs  simulation.rs  timeline.rs
qrsim/src/dispatch/: dummy.rs  dynamic.rs  least_loaded.rs  mod.rs  opt_plus.rs  probability.rs  round_robin.rs  shortest_queue.rs
setup/: Cargo.toml
setup/src/: download_probabilities.rs  download_shards.rs  generate_shards.rs  lib.rs
sim-derive/: Cargo.toml
sim-derive/src/: lib.rs
sim-derive/tests/expand/: simulation.expanded.rs  simulation.rs
sim20/: Cargo.toml
sim20/src/: component.rs  lib.rs  queue.rs  scheduler.rs  state.rs
sim20/tests/: test.rs
simulation/: Cargo.toml
simulation-derive/: Cargo.toml
simulation-derive/src/: lib.rs
simulation-derive/tests/: tests.rs
simulation/src/: broker.rs  component.rs  config.rs  event.rs  flush_status.rs  im_status.rs  lib.rs  listener.rs  logger.rs  main.rs  node.rs  process.rs  progression.rs  query.rs  query_generator.rs  queue.rs  replica_selector.rs  routing_matrix.rs  scheduler.rs  shard_selector.rs  state.rs
simulation/src/tui/: app.rs  mod.rs  ui.rs
simulation/tests/: test.rs
src/: app.rs  broker.rs  config.rs  data.rs  download_shards.rs  event.rs  im_status.rs  keys.rs  lib.rs  logger.rs  main.rs  network.rs  node.rs  query.rs  query_generator.rs  queue.rs  random_shards.rs  replica_selector.rs  routing_matrix.rs  shard_selector.rs  simulation.rs  status.rs  ui.rs
src/optimization/: mod.rs  replica.rs
src/simulation/: broker.rs  config.rs  event.rs  flush_status.rs  history.rs  im_status.rs  logger.rs  mod.rs  node.rs  progression.rs  query.rs  query_generator.rs  queue.rs  replica_selector.rs  routing_matrix.rs  scheduler.rs  shard_selector.rs
src/tui/: app.rs  event.rs  keys.rs  ui.rs
testing/: Cargo.toml
testing/src/: lib.rs
tests/: config.yml  logger.rs  queries.jl
