[package]
name = "fsim"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[lib]
name = "fsim"
path = "src/lib.rs"

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"

[[bin]]
name = "download-shards"
path = "src/bin/download_shards.rs"

[[bin]]
name = "generate-shards"
path = "src/bin/generate_shards.rs"

[dependencies]
anyhow = "1.0"
rand = "0.7"
rand_chacha = "0.2"
rand_distr = "0.2"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
id-derive = "0.1"
im-rc = "14.3.0"
tui = "0.8"
termion = "1.5"
lazy_static = "1.4"
strum = "0.18"
strum_macros = "0.18"
url = "2.1"
reqwest = { version = "0.10.4", features = ["blocking"] }
itertools = "0.9"
indicatif = "0.14"
nalgebra = "0.20"
ordered-float = "1.0"
lp-modeler = "0.4.2"

[dev-dependencies]
proptest = "0.9"
matches = "0.1"
tempdir = "0.3"
faux = "0.0.4"
mockall = "0.6"
float-cmp = "0.6"
