[package]
name = "optimization"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[[bin]]
name = "assign-replicas"
path = "src/assign_replicas.rs"

[[bench]]
name = "lp"
harness = false

[dependencies]
color-eyre = "0.4"
rand = "0.7"
rand_chacha = "0.2"
rand_distr = "0.2"
rayon = "1.4"
itertools = "0.9"
ordered-float = "1.0"
lp-modeler = "0.4.2"
indexed_vec = { version = "1.2", default-features = false }
statrs = "0.12"
thiserror = "1"
structopt = "0.3"
ndarray = "0.14"
uuid = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.15"
log = "0.4"

[dev-dependencies]
proptest = "0.10"
tempfile = "3.1"
testing = { path = "../testing" }
approx = "0.4"
criterion = "0.3"
