[package]
name = "qrsim"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@gmail.com>"]
edition = "2018"

[dependencies]
sim20 = { path = "../sim20" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
im-rc = "15"

[dev-dependencies]
#proptest = "0.10"
#testing = { path = "../testing" }
#tempfile = "3.1"
#float-cmp = "0.8"
