[package]
name = "qrsim"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
rand_chacha = "0.2"
rand_distr = "0.2"
sim20 = { path = "../sim20" }
log = "0.4"
fern = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
im-rc = "15"
humantime = "2"
derive_more = "0.99"
eyre = "0.6"
color-eyre = "0.5"
itertools = "0.9"
delegate = "0.4"
indicatif = "0.15"

[dev-dependencies]
#proptest = "0.10"
#testing = { path = "../testing" }
#tempfile = "3.1"
float-cmp = "0.8"
