[package]
name = "qrsim"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@pm.me>"]
edition = "2018"

[[bin]]
name = "sim"
path = "src/main.rs"

[[bin]]
name = "geninput"
path = "src/geninput.rs"

[dependencies]
rand = "0.7"
rand_chacha = "0.3"
rand_distr = { version = "0.4", features = ["alloc"] }
simrs = { git = "https://github.com/elshize/simrs", branch = "main" }
log = "0.4"
fern = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
im-rc = "15"
humantime = "2"
derive_more = "0.99"
eyre = "0.6"
color-eyre = "0.5"
itertools = "0.9"
delegate = "0.5"
indicatif = "0.15"
strum = { version = "0.20", features = ["derive"] }
csv = "1.1"
clap = "3.0.0-beta.2"
bincode = "1"
rmp-serde = "0.15"
ndarray = "0.14"
optimization = { path = "../optimization" }
thiserror = "1"

[dev-dependencies]
float-cmp = "0.8"
rstest = "0.6"
quickcheck = "1"
quickcheck_macros = "1"
