[package]
name = "query-routing-set"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[lib]
name = "setup"
path = "src/lib.rs"

[[bin]]
name = "download-shards"
path = "src/download_shards.rs"

[[bin]]
name = "download-probabilities"
path = "src/download_probabilities.rs"

[[bin]]
name = "generate-shards"
path = "src/generate_shards.rs"

[dependencies]
anyhow = "1.0"
rand = "0.7"
rand_chacha = "0.2"
structopt = "0.3"
url = "2.1"
itertools = "0.9"
indicatif = "0.15"
attohttpc = { version = "0.14", default-features = false }

[dev-dependencies]
proptest = "0.10"
tempfile = "3.1"
