[package]
name = "simulation"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
rand = "0.7"
rand_chacha = "0.2"
rand_distr = "0.2"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
id-derive = "0.1"
im-rc = "15"
tui = "0.9"
termion = "1.5"
lazy_static = "1.4"
strum = "0.18"
strum_macros = "0.18"

[dev-dependencies]
proptest = "0.10"
testing = { path = "../testing" }
tempfile = "3.1"
float-cmp = "0.8"
